--- a/index.html
+++ b/index.html
@@ -1,1 +1,197 @@
 <!-- css homework write code here -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Web-Structure/index.css">
+    <!-- =========================import bootstrap icon =========================-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="icon" type="image/x-icon" href="./PIC/favicon.ico">
+    <!--========================= import google font =========================-->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <title>CC#18MIND</title>
+</head>
+
+<body>
+    <nav class="navbar">
+        <div class="nav-name">
+            <a href="#section-home">
+                <h1>ALLAN JOHNSON</h1>
+                <p>Personal Life Coach</p>
+            </a>
+
+        </div>
+        <ul class="nav-ul">
+            <li><a href="#section-home" class="nav-a">Home</a></li>
+            <li><a href="#section-about" class="nav-a">About</a></li>
+            <li><a href="#section-services" class="nav-a">Services</a></li>
+            <li><a href="#section-contact" class="nav-a">Contact</a></li>
+            <li><a href="#section-home" class="nav-a"><i class="bi bi-person-circle"></i> Log In</a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="section">
+        <a href="#section-contact" class="chat-box"><i class="bi bi-chat-text-fill"></i></a>
+
+        <!--========================= Section-1 =========================-->
+        <div class="section1-bg" id="section-home">
+            <div class="section1-content">
+                <div class="section-gap"></div>
+                <p>AMBITION IS THE FIRST STEP TOWARDS</p>
+                <h1>SUCCESS</h1>
+                <p>Now Available for Online Coaching</p>
+                <a href="#section-services">Book Now</a>
+            </div>
+        </div>
+
+        <!--========================= Section-2 =========================-->
+        <div class="section2-bg" id="section-about">
+            <div class="section-gap"></div>
+            <div class="section2-content">
+                <div class="section2-item2"></div>
+                <div class="section2-item1">
+                    <h1 class="first-letter">ABOUT <br> ME</h1>
+                    <br>
+                    <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text”
+                        or double click me to add your own content and make changes to the font. Feel free to drag and
+                        drop me anywhere you like on your page. ​</p>
+                    <br>
+                    <p>This is a great space to write long text about your company and your services. You can use this
+                        space to go into a little more detail about your company. Talk about your team and what services
+                        you provide.</p>
+                    <div class="section2-link">
+                        <a href="#section-home">Read More</a>
+                        <a href="#section-services">Free Consultation</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <!--========================= Section-3 =========================-->
+        <div class="section3-bg" id="section-services">
+            <div class="section-gap"></div>
+            <div class="section3-content">
+                <div class="section3-item1">
+                    <h1 class="first-letter">How I Can <br>Help You</h1>
+                </div>
+                <div class="section3-item2">
+                    <div>
+                        <div>
+                            <h2>Free Consultation</h2>
+                            <p>Use this area to describe one of your services.</p>
+                            <hr>
+                            <p>45 min</p>
+                        </div>
+                        <div>
+                            <a href="#section-contact">Book It</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h2>Online Coaching</h2>
+                            <p>Use this area to describe one of your services.</p>
+                            <hr>
+                            <p>1 hr <br>$70</p>
+                        </div>
+                        <div>
+                            <a href="#section-contact">Book It</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <h2>Self-Improvement Workshop</h2>
+                            <p>Use this area to describe one of your services.</p>
+                            <hr>
+                            <p>Mon, Tue, Wed, Thu, Fri <br>1 hr <br>$90</p>
+                        </div>
+                        <div>
+                            <a href="#section-contact">Book It</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="section3-item3">
+                    <a href="#section-contact">More Services</a>
+                </div>
+            </div>
+            <svg style="width: 100%; margin-bottom: -9px;" viewBox="0 0 5950 394" fill="none">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M0 293.923V393.09H330.556H1983.33H3966.67L5950 393.091L5950 203.02C5288.89 244.34 4627.78 194.756 3966.67 128.645C3878.52 119.83 3790.37 110.722 3702.22 101.613C3129.26 42.4069 2556.3 -16.7992 1983.33 4.6869C1322.22 29.4786 661.111 161.701 330.556 227.812L0 293.923Z"
+                    fill="#ffffff"></path>
+            </svg>
+        </div>
+
+        <!--========================= Section-4 =========================-->
+        <div class="section4-bg" id="section-contact">
+            <div class="section-gap"></div>
+            <div class="section4-content">
+                <div class="section4-item1">
+                    <h2>Contact</h2>
+                    <p>500 Terry Francine Street, <br>San Francisco, CA 94158</p>
+                    <p>Tel: 123-456-7890 <br>Fax: 123-456-7890</p>
+                    <p>info@mysite.com</p>
+                    <div>
+                        <a href="#section-contact"><i class="bi bi-facebook"></i></a>
+                        <a href="#section-contact"><i class="bi bi-twitter-x"></i></a>
+                        <a href="#section-contact"> <i class="bi bi-instagram"></i></a>
+                        <a href="#section-contact"><i class="bi bi-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="section4-item2">
+                    <form action="http://jkorpela.fi/cgi-bin/echo.cgi">
+                        <label for="name">Enter Your Name</label>
+                        <input type="text" name="name" id="name" required>
+                        <label for="email">Enter Your Email*</label>
+                        <input type="email" name="email" id="emial" required>
+                        <label for="subject">Enter Your Subject</label>
+                        <input type="text" name="subject" id="subject">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message"></textarea>
+                        <input type="submit" value="Summit">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="footer-1">
+            <p>© 2024 Designed by Watcharaphol Dangpiem <br>Online CodeCamp#18 Student</p>
+        </div>
+    </footer>
+</body>
+
+<!--========================= Scrollbar smooth  =========================-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function () {
+        // Add smooth scrolling to all links
+        $("a").on('click', function (event) {
+
+            // Make sure this.hash has a value before overriding default behavior
+            if (this.hash !== "") {
+                // Prevent default anchor click behavior
+                event.preventDefault();
+
+                // Store hash
+                var hash = this.hash;
+
+                // Using jQuery's animate() method to add smooth page scroll
+                // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+                $('html, body').animate({
+                    scrollTop: $(hash).offset().top
+                }, 500, function () {
+
+                    // Add hash (#) to URL when done scrolling (default click behavior)
+                    window.location.hash = hash;
+                });
+            } // End if
+        });
+    });
+</script>
+
+</html>
